# irods-performances

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  irodsPerf.py  pyproject.toml  webdav-python.ipynb
.github/workflows/: next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md
src/irodsperf/: __init__.py  cleanup.py  cli.py  environment.py  filegen.py  models.py  orchestrator.py  plot.py  session.py  uploaders.py
